GeneWeb version 3.02
--------------------

* Setup program (gwsetup)
  - [Dec 13, 99] Fixed another problem of images displaying with still
    another browser (see version 3.01).

* GeneWeb Service/CGI (gwd)
  - [Dec 13, 99] In tree displays with several branches, add the spouse(s)
    of the top person(s).
  - [Dec 13, 99] Fixed bug: when merging two persons, the godchildren,
    possible children, foster children (and so on...) of the second
    person were not transferred to the first person (problem only
    with "children" relations, not "parents").
  - [Dec 10, 99] In tree displays with several branches, the option
    "add spouses" did not work. Fixed.

* GeneWeb uncompiler (gwu) and GeneWeb to gedcom (gwb2ged)
  - [Dec 13, 99] Fixed bug: the option '-s' (extraction of a surname)
    also selected children with different surnames.

GeneWeb version 3.01
--------------------

* Languages
  - [Nov 22, 99] Added Finnish (Antti Alfthan)

* Setup program (gwsetup)
  - [Nov 29, 99] Updated French version
  - [Nov 29, 99] Updated German version (Thomas Omerzu)
  - [Nov 7, 99] Fixed problem in Windows version under Netscape: images did
    not appear...

* GeneWeb Service/CGI (gwd)
  - [Dec 2..6, 99] In relationship computing, can print the complete graph
    (all branches in one page). Proposed (when there are no too many links)
    in the list of relationships for each branch type ("click here") and
    globally in links at end of page.
  - [Nov 26, 99] Faster computation of list of all titles and all places
  - [Nov 26, 99] Fixed a problem of sometimes displaying of a message
    "document contains no data" from the browser when computing relationship.
  - [Nov 19, 99] Added ability of customization of the page displayed when
    no data base is given (must make a file etc/index.txt).
  - [Nov 16, 99] Fixed bug: some old dates failed the calendars page
  - [Nov 13, 99] In calendars, display the number of days since ...